Fixed photo overflow on small screens
Thought of this as I was falling asleep the other day. Crazy.

--- a/css/sass/styles.sass
+++ b/css/sass/styles.sass
@@ -275,7 +275,14 @@ section#contact .content-container
   body
     font-size: 150%
 
-@media (max-width: 740px)
+@media (max-width: 740px) 
+  .image-container
+    width: 100%
+  
+    img
+      max-width: 100%
+      height: inherit
+    
   .about
     font-size: 130%
 
